# llm-backend-divergence

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
data/: canary.jsonl
divergence/: __init__.py  prompt_format.py
divergence/analysis/: __init__.py  latency_breakdown.py  logprob_divergence.py  output_divergence.py  structured_comparison.py
divergence/backends/: __init__.py  base.py  llamacpp_base.py  llamacpp_constants.py  llamacpp_q4km.py  llamacpp_q8.py  mlx_fp16.py  mlx_q4.py  mock.py  schema.py  torch_mps.py
divergence/cli/: __init__.py  main.py
divergence/dashboard/: __init__.py  app.py  data_loader.py
divergence/evals/: __init__.py  datasets.py
divergence/runner/: __init__.py  db.py  run.py
docs/: findings.md  methodology.md  torch-mps-limitations.md
scripts/: download_and_run.sh
tests/: test_backends.py  test_cli.py  test_datasets.py  test_docs.py  test_llamacpp.py  test_logprob_divergence.py  test_mlx_fp16.py  test_mlx_q4.py  test_output_divergence.py  test_prompt_format.py  test_runner.py  test_smoke.py  test_structured_comparison.py  test_torch_mps.py
tests/dashboard/: test_smoke.py
