[project]
name = "llm-backend-divergence"
version = "0.1.0"
description = "LLM backend divergence evaluation framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.19"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["divergence"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "mlx-lm>=0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = ["slow: marks tests requiring model download (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["divergence"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
