[project]
name = "llm-backend-divergence"
version = "0.1.0"
description = "LLM backend divergence evaluation framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7", "datasets>=2.0", "tqdm>=4.60", "typer>=0.9", "rich>=13.0"]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.19"]
llamacpp = ["llama-cpp-python>=0.3"]
torch = ["torch>=2.0", "transformers>=4.40"]

[project.scripts]
divergence = "divergence.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["divergence"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "mlx-lm>=0.19",
    "psutil>=5.9",
    "llama-cpp-python>=0.3",
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = ["slow: marks tests requiring model download (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["divergence"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["datasets", "tqdm", "typer", "rich", "rich.table", "rich.console"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
